--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=ironhacker
-spring.datasource.password=1r0nh4ck3r
+spring.datasource.password=1r0nh4cker
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.security.user.name=ironhacker
+spring.security.user.password=1r0nh4cker
 
