--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/midterm
 spring.datasource.username=ironhacker
 spring.datasource.password=1r0nh4cker
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 spring.security.user.name=ironhacker
