--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=1r0nh4cker
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jackson.serialization.write_dates_as_timestamps=false
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
