--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jackson.serialization.write_dates_as_timestamps=false
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 spring.security.user.name=ironhacker
